Adjusted descriptions for lane choices

--- a/pipeline_webpage/index.html
+++ b/pipeline_webpage/index.html
@@ -214,21 +214,21 @@
                             <input type="radio" class="choices" name="lanes" id="one-lane">
                             <span class="radio__control"></span>
                         </span>
-                        <span class="radio__label">SP Flowcell [ONE]</span>
+                        <span class="radio__label">NextSeq [ONE]</span>
                     </label>
                     <label class="radio">
                         <span class="radio__input">
                             <input type="radio" class="choices" name="lanes" id="two-lane">
                             <span class="radio__control"></span>
                         </span>
-                        <span class="radio__label">S2 Flowcell [TWO]</span>
+                        <span class="radio__label">NovaSeq SP/S1/S2 Flow cell [TWO]</span>
                     </label>
                     <label class="radio">
                         <span class="radio__input">
                             <input type="radio" class="choices" name="lanes" id="four-lane">
                             <span class="radio__control"></span>
                         </span>
-                        <span class="radio__label">S4 Flowcell [FOUR]</span>
+                        <span class="radio__label">NovaSeq S4 Flow cell [FOUR]</span>
                     </label>
                 </div>
                 <div class="question-button">
